MySqlDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysqldeploy
  labels:
     app: mysqldeploy
spec:
  template:
    metadata:
      name: mysql
      labels:
        pod: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
          args:
               - "--ignore-db-dir=lost+found"
          ports:
           - containerPort: 3306
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
  replicas: 1
  selector:
     matchLabels:
          pod: mysql
