WordPressDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpressdeploy
  labels:
     app: wordpressdeploy
spec:
  template:
    metadata:
      name: wordpressPod
      labels:
        pod: wordpress
    spec:
      containers:
        - name: wordpress
          image: wordpress:4.8-apache
          ports:
             - containerPort: 80
          volumeMounts:
             - name: wordpress-persistent-storage
               mountPath: /var/www/html
      volumes:
        - name:   wordpress-persistent-storage
          persistentVolumeClaim:
            claimName: wp-pv-claim
  replicas: 1
  selector:
     matchLabels:
          pod: wordpress
